--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -16,7 +16,7 @@
       <meta name=robots content="{{tpl:BlogMetaRobots}}">
     </tpl:Block>
 
-    {{tpl:origineInlineStyles}}
+    {{tpl:origineStylesInline}}
 
     <tpl:Block name="head-link">
       <link rel=stylesheet href={{tpl:BlogThemeURL}}/style.min.css>
