--- a/tpl/_attachments.html
+++ b/tpl/_attachments.html
@@ -1,7 +1,7 @@
 <tpl:Attachments>
   <tpl:AttachmentsHeader>
     <div id=annexes class="attachments content">
-      <h3>Annexes</h3>
+      <h3>{{tpl:lang attachments-title}}</h3>
 
       <ol>
   </tpl:AttachmentsHeader>
