--- a/tpl/home.html
+++ b/tpl/home.html
@@ -1,7 +1,7 @@
 {{tpl:extends parent="__layout.html"}}
 
 <tpl:Block name="head-title">
-  <title>{{tpl:BlogName encode_html="1"}}<tpl:PaginationIf start="0"> – {{tpl:lang page}} {{tpl:PaginationCurrent}}</tpl:PaginationIf></title>
+  <title>{{tpl:BlogName encode_html="1"}}<tpl:PaginationIf start="0"> – {{tpl:lang page-noun-before-number}} {{tpl:PaginationCurrent}}</tpl:PaginationIf></title>
 </tpl:Block>
 
 <tpl:Block name="head-description">
