--- a/tpl/tag.html
+++ b/tpl/tag.html
@@ -5,12 +5,12 @@
 </tpl:Block>
 
 <tpl:Block name="head-description">
-  <meta name=description content="{{tpl:lang Posts related to the tag}} {{tpl:TagID encode_html="1"}}">
+  <meta name=description content="{{tpl:lang tag-meta-description}} {{tpl:TagID encode_html="1"}}">
 </tpl:Block>
 
 <tpl:Block name="main-content">
   <header class=content-info>
-    <span class=label>{{tpl:lang tag}}</span>
+    <span class=label>{{tpl:lang tag-label}}</span>
 
     <h1 class=content-title>{{tpl:TagID}}</h1>
   </header>
