--- a/tpl/_entry-page.html
+++ b/tpl/_entry-page.html
@@ -1,4 +1,4 @@
-<article id={{tpl:lang page}}-{{tpl:EntryID}} class="page {{tpl:EntryIfOdd}} {{tpl:EntryIfFirst}}"{{tpl:origineEntryLang}}>
+<article id={{tpl:lang page-id}}-{{tpl:EntryID}} class="page {{tpl:EntryIfOdd}} {{tpl:EntryIfFirst}}"{{tpl:origineEntryLang}}>
   <header>
     <h1 class=post-title>{{tpl:EntryTitle}}</h1>
   </header>
