--- a/tpl/archive.html
+++ b/tpl/archive.html
@@ -1,21 +1,21 @@
 {{tpl:extends parent="__layout.html"}}
 
 <tpl:Block name="head-title">
-  <title>{{tpl:lang Archives}} – {{tpl:BlogName encode_html="1"}}</title>
+  <title>{{tpl:lang archive-title}} – {{tpl:BlogName encode_html="1"}}</title>
 </tpl:Block>
 
 <tpl:Block name="head-description"></tpl:Block>
 
 <tpl:Block name="main-content">
   <div id=content-info>
-    <h1 class=content-title>{{tpl:lang Archives}}</h1>
+    <h1 class=content-title>{{tpl:lang archive-title}}</h1>
   </div>
 
   <article class=post>
     <h2>{{tpl:lang By date}}</h2>
 
     <p class=fromto>
-      {{tpl:lang From}} <tpl:Entries no_content="1" order="asc" lastn="1"><a href={{tpl:EntryURL}}>{{tpl:EntryDate}}</a></tpl:Entries> {{tpl:lang to}} <tpl:Entries no_content="1" order="desc" lastn="1"><a href={{tpl:EntryURL}}>{{tpl:EntryDate}}</a></tpl:Entries>
+      {{tpl:lang archive-date-from}} <tpl:Entries no_content="1" order="asc" lastn="1"><a href={{tpl:EntryURL}}>{{tpl:EntryDate}}</a></tpl:Entries> {{tpl:lang archive-date-to}} <tpl:Entries no_content="1" order="desc" lastn="1"><a href={{tpl:EntryURL}}>{{tpl:EntryDate}}</a></tpl:Entries>
     </p>
 
     <tpl:Archives order="asc">
@@ -36,7 +36,7 @@
 
     <tpl:Categories level="1">
       <tpl:CategoriesHeader>
-          <h2>{{tpl:lang By category}}</h2>
+          <h2>{{tpl:lang archive-by-category}}</h2>
 
           <ul>
       </tpl:CategoriesHeader>
@@ -68,7 +68,7 @@
     <tpl:Tags sortby="count" order="desc">
       <tpl:TagsHeader>
         <div id=by-tag class=arch-block>
-          <h2>{{tpl:lang By tag}}</h2>
+          <h2>{{tpl:lang archive-by-tag}}</h2>
 
           <ul>
       </tpl:TagsHeader>
@@ -83,7 +83,7 @@
 
     <tpl:Entries type="page" no_content="1" lastn="0" selected="0">
       <tpl:EntriesHeader>
-        <h2>{{tpl:lang Pages}}</h2>
+        <h2>{{tpl:lang archive-pages}}</h2>
 
         <ul>
       </tpl:EntriesHeader>
