--- a/tpl/page.html
+++ b/tpl/page.html
@@ -24,7 +24,7 @@
   <tpl:EntryIf show_comments="1">
     <script src={{tpl:BlogQmarkURL}}pf=util.js></script>
     <script type=application/json id=dc_post_remember_str-data>
-      { "post_remember_str": "{{tpl:lang Remember me}}" }
+      { "post_remember_str": "{{tpl:lang comment-remember-me}}" }
     </script>
     <script src={{tpl:BlogQmarkURL}}pf=post.js></script>
   </tpl:EntryIf>
