--- a/tpl/password-form.html
+++ b/tpl/password-form.html
@@ -1,7 +1,7 @@
 {{tpl:extends parent="__layout.html"}}
 
 <tpl:Block name="head-title">
-  <title>{{tpl:lang Password needed}} – {{tpl:BlogName encode_html="1"}}</title>
+  <title>{{tpl:lang password-needed-title}} – {{tpl:BlogName encode_html="1"}}</title>
 </tpl:Block>
 
 <tpl:Block name="head-description">
@@ -15,18 +15,18 @@
 </tpl:Block>
 
 <tpl:Block name="main-content">
-  <article id={{tpl:lang page}}-{{tpl:EntryID}} class="page {{tpl:EntryIfOdd}} {{tpl:EntryIfFirst}} full"{{tpl:origineEntryLang}}>
+  <article id={{tpl:lang page-id}}-{{tpl:EntryID}} class="page {{tpl:EntryIfOdd}} {{tpl:EntryIfFirst}} full"{{tpl:origineEntryLang}}>
     <header>
-      <h1 class=post-title>{{tpl:lang Password needed}}</h1>
+      <h1 class=post-title>{{tpl:lang password-needed-title}}</h1>
     </header>
 
     <section class="page-content content-text">
       {{tpl:SysBehavior behavior="publicEntryBeforeContent"}}
 
       <form action={{tpl:EntryURL}} method=post role=form>
-        <p>{{tpl:lang You must give a password to access this area.}}</p>
+        <p>{{tpl:lang password-needed-form-intro}}</p>
 
-        <p><label>{{tpl:lang Password}}<br><input type=password name=password value=""></label> <input type=submit value="Valider"></p>
+        <p><label>{{tpl:lang password-needed-form-label}}<br><input type=password name=password></label> <input type=submit value="{{tpl:lang password-needed-form-submit}}"></p>
       </form>
 
       {{tpl:SysBehavior behavior="publicEntryAfterContent"}}
