--- a/tpl/static.html
+++ b/tpl/static.html
@@ -13,7 +13,7 @@
     {{tpl:BlogStaticEntryURL}}
 
     <tpl:Entries>
-      <article id={{tpl:lang page}}-{{tpl:EntryID}} class=page{{tpl:origineEntryLang}}>
+      <article id={{tpl:lang page-id}}-{{tpl:EntryID}} class=page{{tpl:origineEntryLang}}>
         <section class=content-text>
           {{tpl:SysBehavior behavior="publicEntryBeforeContent"}}
 
