--- a/tpl/tags.html
+++ b/tpl/tags.html
@@ -1,14 +1,14 @@
 {{tpl:extends parent="__layout.html"}}
 
 <tpl:Block name="head-title">
-  <title>{{tpl:lang Tags}} – {{tpl:BlogName encode_html="1"}}</title>
+  <title>{{tpl:lang tags-title}} – {{tpl:BlogName encode_html="1"}}</title>
 </tpl:Block>
 
 <tpl:Block name="head-description"></tpl:Block>
 
 <tpl:Block name="main-content">
   <header class=content-info>
-    <h1 class=content-title>{{tpl:lang Tags}}</h1>
+    <h1 class=content-title>{{tpl:lang tags-title}}</h1>
   </header>
 
   <ul class=tags>
