Ajout guillemets aux URL avec =

--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -3,7 +3,7 @@
 
   <tpl:SysIf jquery_needed="1">
     <tpl:Block name="footer-scripts">
-      <script src={{tpl:BlogQmarkURL}}pf={{tpl:BlogJsJQuery}}/jquery.js></script>
+      <script src="{{tpl:BlogQmarkURL}}pf={{tpl:BlogJsJQuery}}/jquery.js"></script>
     </tpl:Block>
   </tpl:SysIf>
 
