--- a/tpl/post.html
+++ b/tpl/post.html
@@ -22,10 +22,10 @@
   <script src={{tpl:BlogQmarkURL}}pf={{tpl:BlogJsJQuery}}/jquery.js></script>
 
   <tpl:EntryIf show_comments="1">
-    <script src={{tpl:BlogQmarkURL}}pf=util.js></script>
+    <script src="{{tpl:BlogQmarkURL}}pf=util.js"></script>
     <script type=application/json id=dc_post_remember_str-data>
       { "post_remember_str": "{{tpl:lang comment-remember-me}}" }
     </script>
-    <script src={{tpl:BlogQmarkURL}}pf=post.js></script>
+    <script src="{{tpl:BlogQmarkURL}}pf=post.js"></script>
   </tpl:EntryIf>
 </tpl:Block>
